--- a/Branding365Web/Branding365Web.csproj
+++ b/Branding365Web/Branding365Web.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DeployBrandingModel.cs" />
     <Compile Include="Models\HomeIndexViewModel.cs" />
     <Compile Include="Services\BrandingService.cs" />
     <Compile Include="Services\IResolvableService.cs" />
