--- a/Branding365Web/Branding365Web.csproj
+++ b/Branding365Web/Branding365Web.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Services\BrandingService.cs" />
     <Compile Include="Services\IResolvableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Logger.cs" />
     <Compile Include="SharePointContext.cs" />
     <Compile Include="TokenHelper.cs" />
   </ItemGroup>
